# vaccin-simulator

./: .g.cpp.un~  .gitignore  CMakeCache.txt  CMakeLists.txt  DesignByContract.h  Makefile  Simulator.cpp  Simulator.h  SingleTests  Vaccimulator  Vaccimulator.cpp  VaccimulatorTests  VaccimulatorTests.cpp  a.out  cmake_install.cmake  frame0.ini  g.cpp  h  h.cpp  main.cpp  output.txt  test.cpp  utils.cpp  utils.h
Project/: main.cpp
docs/: _j_array_8h_source.html  _j_keys_8h_source.html  _planning_8h_source.html  _vaccination_center_8h_source.html  annotated_dup.js  class_hub.html  class_j_array-members.html  class_j_array.js  class_j_value-members.html  class_j_value.html  class_planning-members.html  class_planning.html  class_planning.js  class_simulation_data-members.html  class_simulator.html  class_simulator.js  class_vaccination_center-members.html  class_vaccination_center.html  class_vaccine.html  classes.html  dir_3fb67633942bd84f7aa391e58ba835b3.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d691984d1d74be3b164cee16192654be.html  dir_d691984d1d74be3b164cee16192654be.js  dir_da4c9dd239018fe26269ba2e1cf7c9a1.js  files.html  functions.html  index.html  menudata.js  navtreeindex0.js
docs/search/: all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  searchdata.js
domain/: Hub.cpp  Hub.h  VaccinatieCentrum.cpp  VaccinatieCentrum.h
doxygen/: Doxyfile
doxygen/html/: _design_by_contract_8h_source.html  _hub_8h_source.html  _j_array_8h_source.html  _j_keys_8h_source.html  _j_object_8h_source.html  _j_value_8h_source.html  _planning_8h_source.html  _simulation_data_8h_source.html  _simulator_8h_source.html  _test_utils_8h_source.html  _vaccination_center_8h_source.html  _vaccine_8h_source.html  _x_m_l_parser_8h_source.html  annotated.html  annotated_dup.js  class_hub-members.html  class_hub.html  class_hub.js  class_hub_tests-members.html  class_hub_tests.html  class_hub_tests.js  class_j_array-members.html  class_j_array.html  class_j_object-members.html  class_j_object.html  class_j_object.js  class_j_value-members.html  class_j_value.html  class_j_value.js  class_json_tests-members.html  class_json_tests.html  class_planning-members.html  class_planning.html  class_planning.js  class_simulation_data.html  class_simulation_data.js  class_simulation_output_tests-members.html  class_simulation_output_tests.html  class_simulation_output_tests.js  class_simulator-members.html  (+413 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+25 more)
entities/: .VaccinationCenter.cpp.un~  .VaccinationCenter.h.un~  Cargo.cpp  Cargo.h  Hub.cpp  Hub.h  Planning.cpp  Planning.h  Simulator.cpp  Simulator.h  Vaccin.cpp  Vaccin.h  VaccinationCenter.cpp  VaccinationCenter.cpp~  VaccinationCenter.h  VaccinationCenter.h~  Vaccine.cpp  Vaccine.h
io/: .input.xml.swp  XMLParser.cpp  XMLParser.h  output.txt  output2.txt
io/output/: Simulation_2021-04-23_09-50-17.txt  Simulation_2021-04-28_01-52-50.txt  Simulation_2021-04-28_09-46-55.txt  Simulation_2021-06-05_13-03-35.txt  Simulation_2021-06-05_13-04-21.txt  Simulation_2021-06-05_14-52-56.txt  Simulation_2021-06-05_15-10-28.txt  Simulation_2021-06-05_19-06-41.txt  Simulation_2021-06-05_19-15-29.txt  Simulation_2021-06-05_19-17-31.txt  Simulation_2021-06-05_21-07-32.txt  Simulation_2021-06-05_21-13-39.txt  Simulation_2021-06-05_21-17-09.txt  Simulation_2021-06-05_22-17-15.txt  Simulation_2021-06-05_22-19-10.txt  Simulation_2021-06-05_22-21-38.txt  Simulation_2021-06-05_22-22-23.txt  Simulation_2021-06-05_22-48-56.txt
io/xml_files/: input.xml  input2.xml  time_test.xml
json/: JArray.cpp  JArray.h  JKeys.h  JObject.cpp  JObject.h  JValue.cpp  JValue.h
src/: Vaccimulator.cpp
src/entities/: Hub.cpp  Hub.h  Planning.cpp  Planning.h  SimulationData.cpp  SimulationData.h  Simulator.cpp  Simulator.h  VaccinationCenter.cpp  VaccinationCenter.h  Vaccine.cpp  Vaccine.h
src/json/: JArray.cpp  JArray.h  JKeys.h  JObject.cpp  JObject.h  JValue.cpp  JValue.h
src/parsing/: IniExporter.cpp  IniExporter.h  XMLParser.cpp  XMLParser.h
src/utilities/: utils.cpp  utils.h
tests/: SingleTests.cpp  TestUtils.cpp  TestUtils.h
tests/data/: JsonTests.cpp  XMLParserTests.cpp
tests/data/exceptions/: duplicated_elements_1.xml  duplicated_elements_2.xml  empty_elements.xml  empty_elements_2.xml  errorstream.txt  inconsistent_simulation.xml  inconsistent_simulation_1.xml  inconsistent_simulation_2.xml  inconsistent_simulation_3.xml  inconsistent_simulation_4.xml  invalid_type_1.xml  invalid_type_2.xml  missing_elements_1.xml  missing_elements_2.xml  multiple_errors.xml  multiple_errors_2.xml  no_root_1.xml  no_root_2.xml  unknown_element_1.xml  unknown_element_2.xml
tests/domain/: HubTests.cpp  PlanningTests.cpp  VaccinationCenterTests.cpp  VaccineTests.cpp
tests/presentation/: HubOutTests.cpp  HubOutputTests.cpp  IniFileGenerationTests.cpp  SimulationOutputTests.cpp  SimulatorOutputTests.cpp
tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
(+33 files in other folders)
